--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.2",
+    "uuid": "^9.0.1",
     "vaul": "^1.1.2"
   },
-  "devDependencies": {
+    "devDependencies": {
+        "@types/uuid": "^9.0.8",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-merge": "^0.7.2",
