Fix: Use npm run enrich in workflow and add tsx dependency
This commit updates the GitHub Actions workflow to use 'npm run enrich' instead of 'node src/enrich.js' to run the data enrichment script. It also adds 'tsx' as a dev dependency in 'package.json' to ensure that the 'enrich' script (which uses 'npx tsx') can be executed correctly both locally and on the server.

This fixes the 'ERR_MODULE_NOT_FOUND' error that occurred when running 'node src/enrich.js' directly in the workflow, while maintaining compatibility with the Astro build process.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "enrich": "npx tsx src/enrich.js"
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
@@ -44,6 +45,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-merge": "^0.7.2",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.9"
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tsx": "^4.19.3"
   }
 }
