--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Enrich data
-        run: node src/enrich.js
+        run: npm run enrich # Use npm run enrich instead of node src/enrich.js
       - name: Build site
         run: npm run build
       - name: Upload artifact
