--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
     "typescript": "^5.7.2",
     "uuid": "^9.0.1",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@types/node": "^22.13.10",
+    "@types/turndown": "^5.0.5",
     "@types/uuid": "^9.0.8",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-merge": "^0.7.2",
