--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
-GITHUB_REPO=github.com:bizkite-co/nomouse
+GITHUB_REPO=github.com:bizkite-co/textnav
 GITHUB_OWNER=bizkite-co
 GITHUB_PROJECT_NAME=TextNav
 GITHUB_PROJECT_NUMBER=5
