--- a/package.json
+++ b/package.json
@@ -46,9 +46,13 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@testing-library/react": "^16.2.0",
     "@types/node": "^22.13.10",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/testing-library__react": "^10.0.1",
     "@types/turndown": "^5.0.5",
     "@types/uuid": "^9.0.8",
+    "jsdom": "^26.0.0",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-merge": "^0.7.2",
     "prettier-plugin-organize-imports": "^4.1.0",
