--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "rm -rf dist; npm cache clean --force; astro build",
     "preview": "astro preview",
     "astro": "astro",
     "enrich": "npx tsx src/enrich.js",
