--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "enrich": "npx tsx src/enrich.js",
-    "test": "mkdir -p vitest-output; rm -rf vitest-output/*; vitest --run --outputFile=./vitest-output/vitest.log",
+    "test": "npm cache clean --force; rm -rf dist; npx playwright test --timeout=30000",
     "test:unit-json": "mkdir -p vitest-output; rm -rf vitest-output/*; vitest --run --reporter=json --outputFile=./vitest-output/vitest.json"
   },
   "dependencies": {
@@ -32,7 +32,6 @@
     "json-patch": "^0.7.0",
     "lucide-react": "^0.468.0",
     "nanostores": "^0.11.3",
-    "playwright": "^1.50.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
@@ -46,6 +45,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@playwright/test": "^1.51.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.13.10",
@@ -54,6 +54,7 @@
     "@types/turndown": "^5.0.5",
     "@types/uuid": "^9.0.8",
     "jsdom": "^26.0.0",
+    "playwright": "^1.51.1",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-merge": "^0.7.2",
     "prettier-plugin-organize-imports": "^4.1.0",
